# CaptureIt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
framework/: abstract_lib_png.cpp  abstract_lib_png.hpp  controller.cpp  controller.hpp  session_interface.cpp  session_interface.hpp  xorg.cpp  xorg.hpp
include/: test.hpp
source/: main.cpp
